list of fixes: -fixed favicon not loading -fixed links in main menu in book.html -fixed link in Call Now button in book.html -fixed horizontal scroll on mobile -fixed (maybe) main menu scroll on mobile

--- a/#source/scss/_responsive.scss
+++ b/#source/scss/_responsive.scss
@@ -110,6 +110,10 @@
         display: none;
     }
 
+    .phone-container {
+        display: none;
+    }
+
     //Home Design
     .home__content {
         order: 4;
@@ -179,7 +183,7 @@
     }
 
     .book-container {
-        grid-template-columns: 1fr;
+        grid-template-columns: 100%;
     }
 
     .book__main-block {
